--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "test": "vitest"
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.2.1",
     "nodemon": "^3.1.0",
     "vite": "^5.2.11",
