un-installed moment and installed date-fns

--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "connect-pg-simple": "^9.0.1",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "express-session": "^1.18.0",
-    "moment": "^2.30.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
