--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/x-date-pickers": "^7.7.0",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.3",
     "connect-pg-simple": "^9.0.1",
     "dayjs": "^1.11.11",
     "dotenv": "^16.0.3",
@@ -23,6 +24,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.4",
